--- a/src/globals.css
+++ b/src/globals.css
@@ -1,5 +1,5 @@
 body {
-  min-width: 35rem;
+  min-width: 28rem;
   background-color: var(--red);
   background-image: radial-gradient(
     circle at 25% 25%,
@@ -121,9 +121,9 @@ button.neu:focus {
 .tab-compilation-summary__header {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
-.tab-compilation-summary__header > h2 {
+.tab-compilation-summary__header > :first-child {
   margin-right: auto;
 }
 ::-webkit-scrollbar {
@@ -134,4 +134,15 @@ button.neu:focus {
 }
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.2);
+}
+.flush-input {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: inherit;
+  appearance: none;
+}
+.flush-input::placeholder {
+  color: #f1f1f180;
 }
