--- a/src/globals.css
+++ b/src/globals.css
@@ -23,7 +23,7 @@ ol {
 }
 :root {
   --red: crimson;
-  --dark-red: #7d1226;
+  --dark-red: #98172f;
   --pink: #ff8bcb;
   --light-gray: #4d4d4d;
   --blue: dodgerblue;
@@ -79,6 +79,9 @@ button {
     inset -8rem -8rem 8rem rgba(255, 255, 255, 0.05);
 }
 button.neu {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 0.5rem;
   border: rgba(255, 255, 255, 0.6) solid 1px;
@@ -86,6 +89,10 @@ button.neu {
   transition-timing-function: ease;
   transition-duration: 0.3s;
   transition-property: background-color, transform, border-color;
+}
+
+button > svg {
+  height: 1rem;
 }
 
 button.neu:hover {
@@ -108,7 +115,7 @@ button.neu:focus {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .save-section > h1 {
   margin-right: auto;
@@ -134,6 +141,7 @@ button.neu:focus {
 }
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 0.5rem;
 }
 .flush-input {
   background: none;
@@ -145,4 +153,29 @@ button.neu:focus {
 }
 .flush-input::placeholder {
   color: #f1f1f180;
+}
+.drawer__container {
+  position: relative;
+}
+.drawer {
+  z-index: 1;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+  animation: cut-in 0.2s ease-in-out;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  backdrop-filter: blur(2px);
+  transform: translateX(-50%) translateY(0.5rem);
+  border-radius: 0.5rem;
+  background-color: var(--dark-red);
+}
+@keyframes cut-in {
+  from {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+  }
+  to {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  }
 }
