--- a/src/globals.css
+++ b/src/globals.css
@@ -111,13 +111,12 @@ button.neu:focus {
   flex-direction: column;
   gap: 1rem;
 }
-.save-section {
+.save-header {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
   gap: 0.5rem;
 }
-.save-section > h1 {
+.save-header > h1 {
   margin-right: auto;
 }
 .tab-compilation-summary {
@@ -178,4 +177,7 @@ button.neu:focus {
   to {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
   }
+}
+.tab-compilation-list-header {
+  margin: 0.5rem 0;
 }
