--- a/src/globals.css
+++ b/src/globals.css
@@ -7,7 +7,7 @@ body {
     var(--dark-red)
   );
   color: var(--white);
-  padding: 1rem;
+  padding: 0.5rem;
 }
 * {
   box-sizing: border-box;
@@ -82,10 +82,9 @@ button.neu {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
   border-radius: 0.5rem;
   border: rgba(255, 255, 255, 0.6) solid 1px;
-  backdrop-filter: blur(1.5rem);
   transition-timing-function: ease;
   transition-duration: 0.3s;
   transition-property: background-color, transform, border-color;
@@ -109,7 +108,7 @@ button.neu:focus {
 .tab-compilation-list {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .save-header {
   display: flex;
@@ -142,6 +141,9 @@ button.neu:focus {
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 0.5rem;
+}
+input {
+  line-height: 1;
 }
 .flush-input {
   background: none;
